Made everything use arraylists and fixed factory floor errors