@@ -227,18 +227,17 @@ public class GamePanel extends JPanel implements ActionListener, MouseListener{
         int xVal = c.getX();
         int yVal = c.getY();
 
-        LinkedList<TileObject> tile = f.getTiles();
+        ArrayList<TileObject> tiles = f.getTiles();
         //TileObject tile = tiles.getFirst().getItem();
        // Iterator<TileObject> tiles = ti.iterator();
         if(!f.isEmpty()){
-            Iterator<TileObject> tiles = tile.iterator();
-            g.drawImage(Constants.getImage(tiles.next().getType()), xVal + factoryWidth/2 - tileWidth/2, yVal+tileHeight/2, tileWidth/2, tileHeight/2, null);
+            g.drawImage(Constants.getImage(tiles.get(0).getType()), xVal + factoryWidth/2 - tileWidth/2, yVal+tileHeight/2, tileWidth/2, tileHeight/2, null);
         
-            g.drawImage(Constants.getImage(tiles.next().getType()), xVal + factoryWidth/2 - tileWidth/2, yVal+tileHeight, tileWidth/2, tileHeight/2, null);
+            g.drawImage(Constants.getImage(tiles.get(1).getType()), xVal + factoryWidth/2 - tileWidth/2, yVal+tileHeight, tileWidth/2, tileHeight/2, null);
         
-            g.drawImage(Constants.getImage(tiles.next().getType()), xVal + factoryWidth/2, yVal+tileHeight/2, tileWidth/2, tileHeight/2, null);
+            g.drawImage(Constants.getImage(tiles.get(2).getType()), xVal + factoryWidth/2, yVal+tileHeight/2, tileWidth/2, tileHeight/2, null);
         
-            g.drawImage(Constants.getImage(tiles.next().getType()), xVal + factoryWidth/2, yVal+tileHeight, tileWidth/2, tileHeight/2, null);
+            g.drawImage(Constants.getImage(tiles.get(3).getType()), xVal + factoryWidth/2, yVal+tileHeight, tileWidth/2, tileHeight/2, null);
         }
     }
 
@@ -249,39 +248,51 @@ public class GamePanel extends JPanel implements ActionListener, MouseListener{
             Factory chosen = null;
             if(x < factoryWidth)
             {
-                if(y > 0 && y<factoryHeight && factoryMap.get((byte)0).getTiles().getFirst()  != null)
+                if(y > 0 && y<factoryHeight && factoryMap.get((byte)0).getTiles().size() > 0)
                     chosen = factoryMap.get((byte)0);//factory1;
-                else if (y > factoryTwo.getY() && y<factoryTwo.getY()+factoryHeight && factoryMap.get((byte)1).getTiles().getFirst()  != null)
+                else if (y > factoryTwo.getY() && y<factoryTwo.getY()+factoryHeight && factoryMap.get((byte)1).getTiles().size() > 0)
             	    chosen = factoryMap.get((byte)1);//factory2;
-                else if(y > factoryThree.getY()&& y < factoryThree.getY()+factoryHeight && factoryMap.get((byte)2).getTiles().getFirst()  != null)
+                else if(y > factoryThree.getY()&& y < factoryThree.getY()+factoryHeight && factoryMap.get((byte)2).getTiles().size() > 0)
             	    chosen = factoryMap.get((byte)2);//factory3;
             }
             else if (x>getWidth()-factoryWidth)
             {
-        	    if(y > 0 && y<factoryHeight && factoryMap.get((byte)8).getTiles().getFirst() != null)
+        	    if(y > 0 && y<factoryHeight && factoryMap.get((byte)8).getTiles().size() > 0)
                     chosen = factoryMap.get((byte)8);//factory9;
-                else if (y > factoryTwo.getY() && y<factoryTwo.getY()+factoryHeight && factoryMap.get((byte)7).getTiles().getFirst() != null)
+                else if (y > factoryTwo.getY() && y<factoryTwo.getY()+factoryHeight && factoryMap.get((byte)7).getTiles().size() > 0)
             	    chosen = factoryMap.get((byte)7);//factory8;
-                else if(y > factoryThree.getY()&& y < factoryThree.getY()+factoryHeight && factoryMap.get((byte)6).getTiles().getFirst()  != null)
+                else if(y > factoryThree.getY()&& y < factoryThree.getY()+factoryHeight && factoryMap.get((byte)6).getTiles().size() > 0)
             	    chosen = factoryMap.get((byte)6);//factory7;
             }
             else if(y > factoryThree.getY())
             {
-        	    if(x>factoryFour.getX() && x<factoryFour.getX()+factoryWidth && factoryMap.get((byte)3).getTiles().getFirst() != null)
+        	    if(x>factoryFour.getX() && x<factoryFour.getX()+factoryWidth && factoryMap.get((byte)3).getTiles().size() > 0)
         		    chosen = factoryMap.get((byte)3);//factory4;
-        	    else if(x>factoryFive.getX() && x<factoryFive.getX()+factoryWidth && factoryMap.get((byte)4).getTiles().getFirst() != null)
+        	    else if(x>factoryFive.getX() && x<factoryFive.getX()+factoryWidth && factoryMap.get((byte)4).getTiles().size() > 0)
         		    chosen = factoryMap.get((byte)4);//factory5;
-        	    else if(x>factorySix.getX() && x<factorySix.getX()+factoryWidth && factoryMap.get((byte)5).getTiles().getFirst() != null)
+        	    else if(x>factorySix.getX() && x<factorySix.getX()+factoryWidth && factoryMap.get((byte)5).getTiles().size() > 0)
         		    chosen = factoryMap.get((byte)5); //factory6;
             } 
             //needs coordinates
-            else if(floor.getTiles().getFirst() != null){
+            else {
+                /*Iterator<TileObject> iter = floor.getTiles().iterator();
+                if(iter.hasNext()){
+                    if(floor.hasOneTile()){
+                        if(floor.getTiles().size() > 1){
+                            chosen = floor;
+                        }
+                    } else {
+                        if(floor.getTiles().getSize() > 0){
+                        chosen = floor;
+                        }
+                    }
+                }*/
                 if(floor.hasOneTile()){
-                    if(floor.getTiles().getSize() > 1){
+                    if(floor.getTiles().size() > 1){
                         chosen = floor;
                     }
-                } else {
-                    if(floor.getTiles().getSize() > 0){
+                } else{
+                    if(floor.getTiles().size() > 0){
                         chosen = floor;
                     }
                 }
@@ -292,10 +303,15 @@ public class GamePanel extends JPanel implements ActionListener, MouseListener{
                 if(chosen.equals(floor)){
                     if(floor.hasOneTile()){
                         floor.setHasOneTile(false);
-                        Iterator<TileObject> iter = floor.getTiles().iterator();
-                        TileObject t = floor.getTiles().getFirst().getItem();
-                        while(!t.getType().equals(Constants.ONE_TILE)){
+                        //Iterator<TileObject> iter = floor.getTiles().iterator();
+                        TileObject t = floor.getTiles().get(0);
+                        /*while(!t.getType().equals(Constants.ONE_TILE)){
                             t = iter.next();
+                        }*/
+                        for(int i = 0; i < floor.getTiles().size(); i++){
+                            if(floor.getTiles().get(i).getType().equals(Constants.ONE_TILE)){
+                                t = floor.getTiles().get(i);
+                            }
                         }
                         temp.getFloorLine().addTile(t);
                         floor.getTiles().remove(t);
@@ -316,16 +332,16 @@ public class GamePanel extends JPanel implements ActionListener, MouseListener{
             repaint();
     }
     public static boolean isEmpty(){
-        if(factoryMap.get((byte)0).getTiles().getFirst() == null){
-            if(factoryMap.get((byte)1).getTiles().getFirst() == null){
-                if(factoryMap.get((byte)2).getTiles().getFirst() == null){
-                    if(factoryMap.get((byte)3).getTiles().getFirst() == null){
-                        if(factoryMap.get((byte)4).getTiles().getFirst() == null){
-                            if(factoryMap.get((byte)5).getTiles().getFirst() == null){
-                                if(factoryMap.get((byte)6).getTiles().getFirst() == null){
-                                    if(factoryMap.get((byte)7).getTiles().getFirst() == null){
-                                        if(factoryMap.get((byte)8).getTiles().getFirst() == null){
-                                            if(floor.getTiles().getFirst() == null){
+        if(factoryMap.get((byte)0).getTiles().size() == 0){
+            if(factoryMap.get((byte)1).getTiles().size() == 0){
+                if(factoryMap.get((byte)2).getTiles().size() == 0){
+                    if(factoryMap.get((byte)3).getTiles().size() == 0){
+                        if(factoryMap.get((byte)4).getTiles().size() == 0){
+                            if(factoryMap.get((byte)5).getTiles().size() == 0){
+                                if(factoryMap.get((byte)6).getTiles().size() == 0){
+                                    if(factoryMap.get((byte)7).getTiles().size() == 0){
+                                        if(factoryMap.get((byte)8).getTiles().size() == 0){
+                                            if(floor.getTiles().size() == 0){
                                                 return true;
                                             }
                                         }
